[gd_scene load_steps=7 format=3 uid="uid://b3i7djp5gtk33"]

[ext_resource type="Script" uid="uid://sonvwekxjdrx" path="res://scripts/npc/npc.gd" id="1_r4bp4"]
[ext_resource type="Texture2D" uid="uid://bte420r22u0n6" path="res://assets/graphics/sprites/characters/Shadow1.png" id="2_woxlu"]
[ext_resource type="SpriteFrames" uid="uid://d38ppjvv7ca5m" path="res://assets/graphics/sprites_frame/npc/l_imbrulee.tres" id="3_ay68w"]
[ext_resource type="SpriteFrames" uid="uid://duwm5s16ve54r" path="res://assets/graphics/sprites_frame/npc/quest_icon.tres" id="4_evswx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uq4wp"]
radius = 20.0
height = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1m26u"]
radius = 32.0156

[node name="NPC" type="CharacterBody2D" groups=["npc"]]
script = ExtResource("1_r4bp4")
npc_id = "001"
npc_name = "Bergogne"

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 9)
texture = ExtResource("2_woxlu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_uq4wp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_ay68w")
animation = &"idle_down"

[node name="ChatDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatDetectionArea"]
shape = SubResource("CircleShape2D_1m26u")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="QuestIcon" type="Node2D" parent="."]
z_index = 9

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="QuestIcon"]
position = Vector2(0, -57)
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("4_evswx")
animation = &"quest_icon"
frame_progress = 0.337344

[node name="Name" type="Label" parent="."]
z_index = 10
texture_filter = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_top = -45.0
offset_right = 41.5
offset_bottom = -22.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="ChatDetectionArea" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="ChatDetectionArea" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
